--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "dayjs": "1.11.13",
     "db0": "^0.3.1",
     "defu": "^6.1.4",
-    "fast-xml-parser": "^5.0.8",
+    "fast-xml-parser": "^5.2.0",
     "framer-motion": "^12.4.7",
     "h3": "^1.15.1",
     "iconv-lite": "^0.6.3",
@@ -57,6 +57,7 @@
     "react-dom": "^19.0.0",
     "react-use": "^17.6.0",
     "uncrypto": "^0.1.3",
+    "xml2js": "^0.6.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -65,6 +66,7 @@
     "@napi-rs/pinyin": "^1.7.5",
     "@ourongxing/eslint-config": "3.2.3-beta.6",
     "@ourongxing/tsconfig": "^0.0.4",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/pluginutils": "^5.1.4",
     "@tanstack/react-query": "^5.66.11",
     "@tanstack/router-devtools": "^1.112.0",
